新增空气质量

--- a/app/src/main/res/layout/now.xml
+++ b/app/src/main/res/layout/now.xml
@@ -84,6 +84,23 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp">
+
+            <TextView
+                android:id="@+id/currentAQIDirection"
+                android:textColor="@color/white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="13dp"
+                android:layout_marginEnd="13dp"
+                android:textSize="18sp"/>
+
+        </LinearLayout>
+
     </LinearLayout>
 
 </RelativeLayout>
